--- a/Back-End/bloco-26-typescript/dia-1-introducao-ao-typescript/package.json
+++ b/Back-End/bloco-26-typescript/dia-1-introducao-ao-typescript/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^17.0.41",
+    "readline-sync": "^1.4.10",
     "typescript": "^4.7.3"
   }
 }
